--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,31 @@
   list-style: none;
   box-sizing: border-box;
 }
+::-webkit-scrollbar {
+  width: 4px;
+  height: 0px;
+}
+::-webkit-scrollbar-track {
+  background-color: #0f0f0f;
+}
+::-webkit-scrollbar-thumb {
+  background-color: hsl(0,0%,67%);
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: gray;
+}
 svg {
   width: 24px;
   height: 24px;
   fill: white;
 }
-.account img {
+.login img,
+.account .account-setting .account-s img {
   width: 32px;
   height: 32px;
   border-radius: 50%;
@@ -126,7 +145,7 @@ nav {
 .second .voice:hover {
   background-color: #272727;
 }
-.third {
+nav .third {
   display: flex;
   align-items: center;
   width: 170px;
@@ -152,8 +171,18 @@ nav {
   background-color: #272727;
   cursor: pointer;
 }
-.third .account {
-  padding: 0 10px;
+.third .login {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  transform: translateY(0px);
+}
+.third .login img {
+  border: 0px solid #3ea6ff;
+  box-sizing: content-box;
 }
 @media (max-width: 520px) {
   .second {
@@ -186,11 +215,23 @@ nav {
     background-color: transparent;
     margin-right: 6px;
   }
+  .first .Options {
+    display: none;
+  }
+  .third .add {
+    display: none;
+  }
+  .third {
+    width: 100px;
+  }
+  .third .notifications {
+    padding: 8px;
+  }
+  .third .login {
+    padding: 0 0 0 4px;
+  }
 }
 @media (max-width: 440px) { 
-  nav {
-    padding: 0 6px;
-  }
   .second .voice {
     display: none;
   }
@@ -211,7 +252,7 @@ nav {
   -moz-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
   -o-transform: translateX(-50%);
-  background-color: #4b4b4b8f;
+  background-color: #4b4b4bd4;
   color: white;
   padding: 6px 12px;
   border-radius: 4px;
@@ -285,6 +326,10 @@ nav {
   margin-top: 4px;
 }
 @media (max-width: 520px) {
+  nav {
+    padding: 2px 8px;
+    border-bottom: 1px solid #505050;
+  }
   .right-nav .left { 
     top: calc(100% - 52px);
     bottom: 76px;
@@ -293,6 +338,10 @@ nav {
     width: 100%;
     height: 52px;
     justify-content: space-around;
+    border-top: 1px solid #505050;
+  }
+  .right-nav .left div {
+    padding: 16px 14px 16px;
   }
   .right-nav .left span  {
     color: #fff;
@@ -472,4 +521,190 @@ nav {
 .landing .next{ 
   display: none;
 }
+}
+nav .account {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  display: none;
+  opacity: 0;
+  transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -ms-transition: 0.2s;
+  -o-transition: 0.2s;
+  background-color: rgba(0, 0, 0, 0.57);
+}
+.account .account-setting {
+  position: absolute;
+  right: 0px;
+  top: 10px;
+  width: 300px;
+  background-color: #282828;
+  border-radius: 14px;
+  -webkit-border-radius: 14px;
+  -moz-border-radius: 14px;
+  -ms-border-radius: 14px;
+  -o-border-radius: 14px;
+  overflow-y: scroll;
+  height: calc(100vh - 15px);
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  transition: .2s;
+  -webkit-transition: .2s;
+  -moz-transition: .2s;
+  -ms-transition: .2s;
+  -o-transition: .2s;
+}
+.account .account-setting::-webkit-scrollbar {
+  display: none;
+}
+.account .account-setting .account-s {
+  display: flex;
+  padding: 16px;
+  position: fixed;
+  width: 300px;
+  background-color: #282828;
+  border-top-left-radius: 14px;
+  border-top-right-radius: 14px;
+}
+.account .account-setting .account-s img {
+  width: 45px;
+  height: 45px;
+}
+.account .account-setting .account-s .info {
+  transform: translateX(16px);
+  -webkit-transform: translateX(16px);
+  -moz-transform: translateX(16px);
+  -ms-transform: translateX(16px);
+  -o-transform: translateX(16px);
+}
+.account .account-setting .account-s .info p:nth-child(3) {
+  margin-top: 8px;
+  font-size: 14px;
+}
+.account .account-setting .account-s .info p:nth-child(3) a{
+  color: #3ea6ff;
+}
+.account .account-setting .account-s .info p {
+  font-size: 16px;
+}
+.account .account-setting .first-s {
+  margin-top: 91px;
+}
+.account .account-setting .first-s,
+.account .account-setting .second-s,
+.account .account-setting .third-s,
+.account .account-setting .forth-s,
+.account .account-setting .fifth-s {
+  display: flex;
+  flex-direction: column;
+  padding: 10px 0px;
+}
+.account .account-setting .fifth-s {
+  padding-bottom: 0;
+}
+.account .account-setting .first-s,
+.account .account-setting .second-s,
+.account .account-setting .third-s,
+.account .account-setting .forth-s,
+.account .account-setting .account-s {
+  border-bottom: 1px solid #ffffff33;
+}
+.account .account-setting .one,
+.account .account-setting .two,
+.account .account-setting .three,
+.account .account-setting .four,
+.account .account-setting .five {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  padding: 8px 10px;
+  cursor: pointer;
+}
+.account .account-setting .one:hover,
+.account .account-setting .two:hover,
+.account .account-setting .three:hover,
+.account .account-setting .four:hover,
+.account .account-setting .five:hover {
+  background-color: #3e3e3e;
+}
+.account .account-setting .third-s .one,
+.account .account-setting .third-s .two,
+.account .account-setting .third-s .three,
+.account .account-setting .third-s .four,
+.account .account-setting .first-s .three {
+  justify-content: space-between;
+}
+.account .account-setting svg {
+  margin-right: 10px;
+}
+.account .account-setting p {
+  color: #f1f1f1;
+  font-family: 'Roboto';
+  font-size: 14px;
+  font-weight: 400;
+}
+.account .account-setting .third-s .arrow,
+.account .account-setting .first-s .arrow {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+}
+.account .account-setting .third-s .arrow svg,
+.account .account-setting .first-s .three .arrowe svg {
+  margin-right: 0;
+}
+.account .account-setting .third-s .one #moon {
+  transform: translateX(-3px);
+  -webkit-transform: translateX(-3px);
+  -moz-transform: translateX(-3px);
+  -ms-transform: translateX(-3px);
+  -o-transform: translateX(-3px);
+}
+.account .account-setting .account-s .close {
+  position: absolute;
+  display: none;
+}
+@media (max-width: 520px) {
+  nav .third {
+    width: auto;
+  }
+  .account .account-setting {
+    width: 100%;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    border-radius: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -ms-border-radius: 0;
+    -o-border-radius: 0;
+    top: 100%;
+  }
+  .account .account-setting .account-s {
+    width: 100%;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
+  .account .account-setting .account-s .close {
+    display: block;
+    top: 5px;
+    right: 5px;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 22px;
+    color: #f1f1f1;
+  }
 }
