--- a/css/style.css
+++ b/css/style.css
@@ -570,6 +570,8 @@ nav .account {
   background-color: #282828;
   border-top-left-radius: 14px;
   border-top-right-radius: 14px;
+  height: 110px;
+  padding-top: 25px;
 }
 .account .account-setting .account-s img {
   width: 45px;
@@ -593,7 +595,7 @@ nav .account {
   font-size: 16px;
 }
 .account .account-setting .first-s {
-  margin-top: 91px;
+  margin-top: 110px;
 }
 .account .account-setting .first-s,
 .account .account-setting .second-s,
