--- a/css/style.css
+++ b/css/style.css
@@ -166,10 +166,12 @@ nav .third {
   -o-border-radius: 50%;
   position: relative;
 }
-.third .add:hover,
+@media (min-width: 520px) {
+  .third .add:hover,
 .third .notifications:hover {
   background-color: #272727;
   cursor: pointer;
+}
 }
 .third .login {
   position: relative;
@@ -208,9 +210,6 @@ nav .third {
     -ms-transition: .2s;
     -o-transition: .2s;
 }
-  .second #Search:hover {
-    background-color: #272727;
-  }
   .second .voice {
     background-color: transparent;
     margin-right: 6px;
@@ -272,12 +271,15 @@ nav .third {
   content: "Notifications";
   font-size: 14px;
 }
-.second #Search:hover::after,
+@media (min-width: 520px) {
+  .second #Search:hover::after,
 .second .voice:hover::after,
 .third .add:hover::after,
 .third .notifications:hover::after {
   display: block;
 }
+}
+
 .right-nav .left {
   display: flex;
   flex-direction: column;
@@ -309,9 +311,12 @@ nav .third {
 .right-nav .left .subs span{
   font-size: 11.4px;
 }
-.right-nav .left div:hover {
+@media (min-width: 520px) {
+  .right-nav .left div:hover {
   background-color: #272727;
 }
+}
+
 .right-nav .left span {
   color: #fff;
   max-width: 100%;
@@ -657,7 +662,7 @@ nav .account {
   justify-content: flex-end;
 }
 .account .account-setting .third-s .arrow svg,
-.account .account-setting .first-s .three .arrowe svg {
+.account .account-setting .first-s .three .arrow svg {
   margin-right: 0;
 }
 .account .account-setting .third-s .one #moon {
@@ -700,7 +705,7 @@ nav .account {
   .account .account-setting .account-s .close {
     display: block;
     top: 5px;
-    right: 5px;
+    right: 0px;
     width: 30px;
     height: 30px;
     display: flex;
@@ -709,4 +714,84 @@ nav .account {
     font-size: 22px;
     color: #f1f1f1;
   }
+}
+.m-search {
+  position: fixed;
+  z-index: 10;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 54px;
+  background-color: #0f0f0a;
+  align-items: center;
+  top: 0;
+  left: 0;
+  padding: 0 14px;
+  display: none;
+  top: -54px;
+  transition: .2s;
+  -webkit-transition: .2s;
+  -moz-transition: .2s;
+  -ms-transition: .2s;
+  -o-transition: .2s;
+}
+.m-search .m-back {
+  height: 100%;
+  width: 25px;
+  display: flex;
+  align-items: center;
+  margin-left: 5px;
+}
+.m-search .m-back svg {
+  width: 18px;
+  height: 18px;
+  margin-top: 1px
+}
+.m-search .search-input {
+  width: 70%;
+  height: 27px;
+  display: flex;
+  align-items: center;
+  display: flex;
+}
+.m-search .search-input .text {
+    background-color: #373737;
+    border-radius: 16px 0px 0px 16px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+.m-search .search-input input {
+  background-color: #373737;
+  border: navajowhite;
+  margin-left: 10px;
+  width: 100%;
+  color: #f1f1f1;
+  font-family: 'Roboto';
+}
+.m-search .search-input input:focus {
+  outline: none;
+}
+.m-search .search-input .search-icon {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  background-color: #373737;
+  border-radius: 0px 16px 16px 0px;
+  width: 30px;
+}
+.m-search .search-input .search-icon svg {
+  width: 20px;
+  height: 20px;
+}
+.m-search .voice-icon {
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  background-color: #373737;
+  justify-content: center;
+  border-radius: 50%;
+  margin-left: 5px;
 }
