--- a/css/style.css
+++ b/css/style.css
@@ -715,6 +715,15 @@ nav .account {
     color: #f1f1f1;
   }
 }
+.m-search-container {
+  position: fixed;
+    height: 100vh;
+    width: 100%;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    display: none;
+}
 .m-search {
   position: fixed;
   z-index: 10;
@@ -727,7 +736,6 @@ nav .account {
   top: 0;
   left: 0;
   padding: 0 14px;
-  display: none;
   top: -54px;
   transition: .2s;
   -webkit-transition: .2s;
