--- a/css/style.css
+++ b/css/style.css
@@ -731,7 +731,7 @@ nav .account {
   justify-content: space-between;
   width: 100%;
   height: 54px;
-  background-color: #0f0f0a;
+  background-color: #1f1f1f;
   align-items: center;
   top: 0;
   left: 0;
