--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,11 @@ nav .third {
   left: 0;
   padding: 0 4px;
   top: 54px;
+  transition: .1s;
+  -webkit-transition: .1s;
+  -moz-transition: .1s;
+  -ms-transition: .1s;
+  -o-transition: .1s;
 }
 .right-nav .left div {
   display: flex;
@@ -383,6 +388,12 @@ nav .third {
   -o-transform: translateX(72px) translateY(54px);
   height: calc(100vh - 54px);
   width: calc(100% - 72px);
+  transition: .1s;
+  -webkit-transition: .1s;
+  -moz-transition: .1s;
+  -ms-transition: .1s;
+  -o-transition: .1s;
+  min-height: 1000px;
 }
 .landing .sugg {
   overflow-x: scroll;
@@ -555,7 +566,8 @@ nav .account {
   -ms-border-radius: 14px;
   -o-border-radius: 14px;
   overflow-y: scroll;
-  height: calc(100vh - 15px);
+  max-height: 652px;
+  min-height: 300px;
   -ms-overflow-style: none;
   scrollbar-width: none;
   transition: .2s;
@@ -665,13 +677,6 @@ nav .account {
 .account .account-setting .first-s .three .arrow svg {
   margin-right: 0;
 }
-.account .account-setting .third-s .one #moon {
-  transform: translateX(-3px);
-  -webkit-transform: translateX(-3px);
-  -moz-transform: translateX(-3px);
-  -ms-transform: translateX(-3px);
-  -o-transform: translateX(-3px);
-}
 .account .account-setting .account-s .close {
   position: absolute;
   display: none;
@@ -757,7 +762,7 @@ nav .account {
 }
 .m-search .search-input {
   width: 70%;
-  height: 27px;
+  height: 32px;
   display: flex;
   align-items: center;
   display: flex;
@@ -777,6 +782,7 @@ nav .account {
   width: 100%;
   color: #f1f1f1;
   font-family: 'Roboto';
+  height: 24px;
 }
 .m-search .search-input input:focus {
   outline: none;
@@ -787,11 +793,11 @@ nav .account {
   align-items: center;
   background-color: #373737;
   border-radius: 0px 16px 16px 0px;
-  width: 30px;
+  width: 37px;
 }
 .m-search .search-input .search-icon svg {
-  width: 20px;
-  height: 20px;
+  width: 24px;
+  height: 24px;
 }
 .m-search .voice-icon {
   width: 32px;
@@ -802,4 +808,93 @@ nav .account {
   justify-content: center;
   border-radius: 50%;
   margin-left: 5px;
+}
+.third .notifications {
+  position: relative;
+}
+.open-notifications {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 33px;
+  left: -400px;
+  width: 400px;
+  height: 500px;
+  background-color: #282828;
+  border-radius: 13px;
+  -webkit-border-radius: 13px;
+  -moz-border-radius: 13px;
+  -ms-border-radius: 13px;
+  -o-border-radius: 13px;
+  font-family: 'Roboto';
+  color: #f1f1f1;
+  overflow-y: scroll;
+  display: none;
+}
+.open-notifications::-webkit-scrollbar {
+  display: none;
+}
+.open-notifications .headding {
+  position: fixed;
+  height: 55px;
+  display: flex;
+  width: 400px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  border-bottom: 1px solid #505050;
+  padding: 10px;
+  background-color: #282828;
+  border-radius: 13px 13px 0 0;
+}
+.open-notifications .headding .settings-icon {
+  display: flex;
+  align-items: center;
+}
+.open-notifications .headding .settings-icon svg {
+  width: 22px;
+}
+.open-notifications .headding h1 {
+  font-size: 20px;
+}
+.open-notifications h1 {
+  font-weight: 400;
+}
+.open-notifications  .notif {
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  min-height: 100px;
+  max-height: 150px;
+  padding: 16px 10px 8px 10px;
+  overflow: hidden;
+}
+.open-notifications  .notif:first-child {
+  margin-top: 55px;
+}
+.open-notifications  .notif:last-child {
+  padding-bottom: 0;
+}
+.open-notifications  .notif .user-img img {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+}
+.open-notifications  .notif .text {
+  flex: 1;
+  margin-left: 18px;
+}
+.open-notifications  .notif .text h1 {
+  font-size: 16px;
+  margin-bottom: 8px;
+}
+.open-notifications  .notif .text span {
+  font-size: 12px;
+  color: #aaa;
+}
+.open-notifications  .notif .vid-img img {
+  width: 90px;
+    height: 55px;
+    margin-right: 14px;
+    border-radius: 6px;
 }
