--- a/css/style.css
+++ b/css/style.css
@@ -937,7 +937,7 @@ nav .account {
   position: relative;
 }
 .open-notifications {
-  position: absolute;
+  position: fixed;
   display: flex;
   flex-direction: column;
   top: 6px;
@@ -952,15 +952,17 @@ nav .account {
   color: #f1f1f1;
   overflow-y: scroll;
   z-index: 20;
-  transition: .2s;
-  -webkit-transition: .2s;
-  -moz-transition: .2s;
-  -ms-transition: .2s;
-  -o-transition: .2s;
+  transition: .3s;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -ms-transition: .3s;
+  -o-transition: .3s;
   right: -490px;
   height: calc(100vh - 15px);
   max-height: 650px;
   z-index: 101;
+  display: none;
+  opacity: 0;
 }
 .open-notifications::-webkit-scrollbar {
   display: block;
