--- a/css/style.css
+++ b/css/style.css
@@ -1211,7 +1211,8 @@ nav .account {
   width: 50%;
   display: flex;
   align-items: center;
-  max-width: 400px;
+  scroll-snap-align: start;
+  scroll-snap-stop: always;
 }
 .landing-shorts-page .content h1 {
   margin-top: 200px;
@@ -1226,6 +1227,7 @@ nav .account {
   object-fit: cover;
   position: relative;
   top: 27px;
+  max-width: 400px;
 }
 .buttons {
   position: fixed;
@@ -1313,11 +1315,11 @@ nav .account {
     border-radius: 50%;
     z-index: 1010;
     display: none;
-    transition: .2s;
-    -webkit-transition: .2s;
-    -moz-transition: .2s;
-    -ms-transition: .2s;
-    -o-transition: .2s;
+    transition: .5s;
+    -webkit-transition: .5s;
+    -moz-transition: .5s;
+    -ms-transition: .5s;
+    -o-transition: .5s;
 }
   .Play-Pause span {
     position: absolute;
@@ -1356,10 +1358,10 @@ nav .account {
   }
   .landing-shorts-page .vids video{
     width: 100%;
-    height: calc(100% - 98px);
-    object-fit: cover;
+    height: 100%;
+    object-fit: contain;
     position: relative;
-    top: -20px;
+    top: 0px;
   }
   .landing-shorts-page .vids .jon {
     object-fit: contain;
@@ -1392,6 +1394,128 @@ nav .account {
     -o-transition: .2s;
 }
 .landing-shorts-page span{
-  height:calc(100% - 98px);
+  height: calc(100% - 20px);
+  top: 0;
+  }
 }
+
+.vids-container{
+  width: 100%;
+  height: 100vh;
+  scroll-snap-type: y mandatory;
+  overflow: auto;
+}
+.vids-container::-webkit-scrollbar {
+  display: none;
+}
+
+.video-progress {
+  left: 0px;
+  position: absolute;
+  bottom: 1px;
+  width: 100%;
+  height: 10px;
+  display: flex;
+  align-items: end;
+}
+.video-progress progress {
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: red;
+  border: none;
+  appearance: none;
+  -webkit-appearance: none;
+}
+.video-progress progress::-webkit-progress-bar {
+  background-color: #bebebe;
+}
+.video-progress progress::-webkit-progress-value {
+  background-color: red;
+  /* transition: 1.1s;
+  -webkit-transition: 1.1s;
+  -moz-transition: 1.1s;
+  -ms-transition: 1.1s;
+  -o-transition: 1.1s; */
+}
+.video-progress input {
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  appearance: none;
+  background-color: transparent;
+}
+.video-progress input::-webkit-slider-thumb {
+width: 3px;
+height: 3px;
+opacity: 0;
+}
+.shorts-nav {
+  background-color: transparent;
+  border: none;
+}
+.shorts-nav .third {
+  display: none;
+}
+.shorts-nav .first svg #rectangle{
+  fill: #fff;
+}
+.shorts-nav .first svg #triangle {
+  display: none;
+}
+.ineract {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  right: 10px;
+  z-index: 1011;
+  bottom: 30px;
+}
+.ineract div {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  background-color: #ffffff1a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px 0px;
+}
+.channel {
+  position: absolute;
+  bottom: 22px;
+  display: flex;
+  flex-direction: column;
+  left: 12px;
+}
+.channel .text p {
+  color: #f1f1f1;
+  font-family: 'Roboto';
+  font-weight: normal;
+  font-size: 15px;
+  margin-bottom: 10px;
+} 
+.channel .img {
+  display: flex;
+  align-items: center;
+}
+.channel img {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+.channel .img p {
+  color: #f1f1f1;
+  font-family: 'Roboto';
+  font-weight: normal;
+  font-size: 15px;
+  margin-left: 4px;
 }
