--- a/css/style.css
+++ b/css/style.css
@@ -1319,11 +1319,14 @@ nav .account {
     scroll-snap-align: start;
     scroll-snap-stop: always;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 .vids video{
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     position: relative;
     top: 0px;
   }
@@ -1374,7 +1377,7 @@ nav .account {
 .video-progress {
   left: 0px;
   position: absolute;
-  bottom: 1px;
+  top: calc(100vh - 10px);;
   width: 100%;
   height: 10px;
   display: flex;
@@ -1431,7 +1434,7 @@ opacity: 0;
   flex-direction: column;
   right: 10px;
   z-index: 1011;
-  bottom: 30px;
+  top: calc(100vh - -150px);  
 }
 .ineract div {
   width: 48px;
@@ -1449,7 +1452,7 @@ opacity: 0;
 }
 .channel {
   position: absolute;
-  bottom: 22px;
+  top: calc(100vh - 80px);
   display: flex;
   flex-direction: column;
   left: 12px;
