--- a/css/style.css
+++ b/css/style.css
@@ -1313,7 +1313,7 @@ nav .account {
     height: 18px;
   }
 .vids{
-    height: 100vh;
+    height: 95vh;
     width: 100%;
     background-color: black;
     scroll-snap-align: start;
@@ -1377,7 +1377,7 @@ nav .account {
 .video-progress {
   left: 0px;
   position: absolute;
-  top: calc(100vh - 10px);;
+  bottom: 1px;
   width: 100%;
   height: 10px;
   display: flex;
@@ -1452,7 +1452,7 @@ opacity: 0;
 }
 .channel {
   position: absolute;
-  top: calc(100vh - 120px);
+  bottom: 15px;
   display: flex;
   flex-direction: column;
   left: 12px;
