--- a/css/style.css
+++ b/css/style.css
@@ -1313,7 +1313,7 @@ nav .account {
     height: 18px;
   }
 .vids{
-    height: 95vh;
+    height: 100%;
     width: 100%;
     background-color: black;
     scroll-snap-align: start;
@@ -1369,6 +1369,7 @@ nav .account {
   scroll-snap-type: y mandatory;
   overflow: auto;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
 }
 .vids-container::-webkit-scrollbar {
   display: none;
@@ -1377,7 +1378,7 @@ nav .account {
 .video-progress {
   left: 0px;
   position: absolute;
-  bottom: 1px;
+  bottom: 3px;
   width: 100%;
   height: 10px;
   display: flex;
@@ -1434,8 +1435,7 @@ opacity: 0;
   flex-direction: column;
   right: 10px;
   z-index: 1011;
-   top: calc(100vh - 400px);
-}
+  top: calc(100vh - 360px);}
 .ineract div {
   width: 48px;
   height: 48px;
@@ -1452,7 +1452,7 @@ opacity: 0;
 }
 .channel {
   position: absolute;
-  bottom: 15px;
+  bottom: 30px;
   display: flex;
   flex-direction: column;
   left: 12px;
