--- a/css/style.css
+++ b/css/style.css
@@ -1164,7 +1164,7 @@ nav .account {
   flex-direction: column;
   align-items: center;
 }
-@media (max-width: 620px) {
+@media (max-width: 520px) {
   .vids-container{
     width: 100%;
     scroll-snap-type: y mandatory;
@@ -1449,11 +1449,7 @@ nav .account {
 }
 .video-progress progress::-webkit-progress-value {
   background-color: red;
-  /* transition: 1.1s;
-  -webkit-transition: 1.1s;
-  -moz-transition: 1.1s;
-  -ms-transition: 1.1s;
-  -o-transition: 1.1s; */
+  transition: 0.1s;
 }
 .video-progress input {
   position: absolute;
@@ -1461,11 +1457,22 @@ nav .account {
   height: 2px;
   appearance: none;
   background-color: transparent;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
 }
 .video-progress input::-webkit-slider-thumb {
-width: 3px;
-height: 3px;
-opacity: 0;
+  width: 3px;
+  height: 3px;
+  opacity: 1;
+  transition: 1s;
+  -webkit-transition: 1s;
+  -moz-transition: 1s;
+  -ms-transition: 1s;
+  -o-transition: 1s;
+  display: none;
 }
 .shorts-nav {
   background-color: transparent;
